--- a/popup.html
+++ b/popup.html
@@ -6,25 +6,62 @@
     <style>
       body {
         font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-        padding: 10px;
-        min-width: 220px;
+        padding: 12px;
+        min-width: 240px;
+        color: #1C110A;
+      }
+      h2 {
+        margin: 0 0 4px;
+        font-size: 18px;
+        color: #4D1818;
+      }
+      p {
+        margin: 0 0 10px;
+        font-size: 12px;
+      }
+      .tagline {
+        font-size: 11px;
+        font-style: italic;
+        color: #4D1818;
+        margin-bottom: 10px;
       }
       button {
         width: 100%;
         padding: 8px;
-        margin-top: 4px;
-        font-size: 14px;
+        margin-top: 6px;
+        font-size: 13px;
+        border-radius: 999px;
+        border: none;
+        cursor: pointer;
+      }
+      #toggleSidebar {
+        background: #FFBE08;
+        color: #1C110A;
+        font-weight: 600;
+      }
+      #openOptions {
+        background: #ffffff;
+        color: #E27737;
+        border: 1px solid #E27737;
       }
       small {
+        display: block;
+        margin-top: 10px;
         font-size: 11px;
-        color: #6b7280;
+        color: #6B7280;
       }
     </style>
   </head>
   <body>
     <h2>Sidekick for SaaS</h2>
+    <div class="tagline">For When You Really Just Need a Bridget.</div>
+
+    <button id="toggleSidebar">Toggle sidebar on this tab</button>
     <button id="openOptions">Open Settings</button>
-    <small>Sidebar injects automatically on X / LinkedIn.</small>
+
+    <small>
+      On X and LinkedIn: highlight a post, click "Use selected post" in the sidebar, then "Generate comments."
+    </small>
 
     <script src="popup.js"></script>
   </body>
